fix: changed breakpoints to account for gaps
I adjusted the heading elements to fit changes made. I also changed the size of the mouse icon on different screen sizes.

--- a/components/hero/Hero.module.scss
+++ b/components/hero/Hero.module.scss
@@ -35,7 +35,11 @@
         }
 
         & img {
+            width: 1.666666rem; //30px
 
+            @include mq(sm){
+                width: unset;
+            }
             @include animation(floatingButton, 2s, linear, infinite, alternate);
             @include keyframes(floatingButton){
                 0%   { transform: translateY(0); }
